# Control the order and relation between the subcomponents in Budgie

# Library components
subdir('config')
subdir('libsession')
subdir('imports')
subdir('plugin')
subdir('theme')
subdir('lib')
subdir('raven')

# Executable components
subdir('daemon')
subdir('polkit')
subdir('rundialog')
subdir('wm')
subdir('panel')
