# Control the order and relation between the subcomponents in Budgie

# Library components
subdir('plugin')
subdir('config')
subdir('libsession')
subdir('imports')
subdir('theme')
subdir('lib')
subdir('raven')

# Executable components
subdir('daemon')
subdir('polkit')
subdir('rundialog')
subdir('wm')
subdir('panel')

# Now build applets
subdir('applets')
