# None of these applets depend on one another

applet_namespace = 'org.budgie-desktop.applet'
applets_dir = join_paths(plugin_libdir, applet_namespace)

subdir('clock')
subdir('icon-tasklist')
subdir('lock-keys')
subdir('notifications')
subdir('raven-trigger')
subdir('separator')
subdir('show-desktop')
subdir('spacer')
subdir('status')
subdir('tasklist')
subdir('tray')
subdir('user-indicator')
subdir('workspaces')
